poc_execution_output.txt
  File "/home/ubuntu/Lightning-Bolt-Network/src/ssi_resolver_poc.py", line 45
    "jws": "eyJ...'''  # Simplified JWS signature
           ^
SyntaxError: unterminated string literal (detected at line 45)
